$Id: ChangeLog,v 1.134 2005/10/22 19:16:24 h_oudejans Exp $

2005-10-23 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Implemented 'Hide Broken Configurations'

2005-10-22 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed dialog size problem with wx2.6
	* Fixed several segfaults when the current machine isn't valid.
	* Fixed configuration check for paths with a space in it
	* Added menu item for the 'Display Broken Configurations' option.

2005-10-18 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Rewrote the communication between CheckConfigsDialog and it's
	   thread using messages.

2005-10-15 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Machine and Extensionlists are now updated and saved.

2005-10-14 Manuel Bilderbeek <manuel@msxnet.org>
	* Updated configuration check to work on my system. :)
	  - the form needed more space for several stuff to work properly
	    (Herman, please check if this can be done in a better way.)
	  - fix compilation issues
	  - small cleanups (still a lot TODO, though)
	  - don't output stdout stuff from openMSX to stdout
	  - still WIP!

2005-10-14 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added configuration check (WIP).

2005-07-16 Maarten ter Huurne <maarten@treewalker.org>
	* Compile fixes for wxWidgets 2.6.1.

2005-07-02 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added support for 2 keyjoysticks

2005-06-23 Manuel Bilderbeek <manuel@msxnet.org>
	* There is a bug in wxGTK making ListBox::GetSelections() not work
	  when it is disabled. Fixed it by doing the disable a bit later,
	  after the GetSelections() stuff is done

2005-06-05 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed some about dialog sizes
	* Fixed placing of child dialogs

2005-05-29 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed hang in catapult and/or openMSX when selecting a disk from
	   the history.
	* Fixed a problem with selecting a disk for drive B from the history
	* Changed the about dialog

2005-05-14 Herman Oudejans <hn.oudejans@quicknet.nl>